tests/should_fail/syntax_int_plus_string.nv
module main

// SHOULD FAIL: Int + String arithmetic type error
fn test() -> Int {
    return 1 + "two"
}
println(test())
